[package]
authors = ["xxXyh1908"]
categories = ["data-structures", "text-processing"]
description = "A flexible, easy-to-use, immutable, efficient `String` replacement for Rust."
edition = "2021"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
]
keywords = ["serde", "serialization", "string"]
license = "MIT"
name = "fast-str"
readme = "README.md"
repository = "https://github.com/xxXyh1908/rust-fast-str"
rust-version = "1.60.0"
version = "1.0.0"

[features]
actix-web = ["dep:actix-web"]
arbitrary = ["dep:arbitrary"]
default = []
diffus = ["dep:diffus"]
serde = ["dep:serde"]
stack = []

[dependencies]
actix-web = {version = "4.2", optional = true}
arbitrary = {version = "1.2", default-features = false, optional = true}
diffus = {version = "0.10", optional = true}
serde = {version = "1.0", default-features = false, optional = true, features = ["alloc"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = {version = "0.2", default-features = false, features = ["std"]}

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"

[[bench]]
harness = false
name = "bench"
